--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "cypress": "^13.7.0",
+    "cypress-mochawesome-reporter": "^3.8.2",
     "mochawesome": "^7.1.3"
   },
   "scripts": {
