--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
     "mochawesome": "^7.1.3"
   },
   "scripts": {
-    "start": "npx cypress run --spec 'cypress\\e2e\\saucedemo\\TC1_BuyPackBackSuccess.cy.js' --browser chrome"
+    "start": "npx cypress run --spec 'cypress\/e2e\/saucedemo*.cy.js' --browser chrome"
   }
 }
