update path file

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -22,4 +22,5 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          start: npm start
+          start: npm run start
+          test: npm run test:saucedemo
