--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "mochawesome": "^7.1.3"
   },
   "scripts": {
-    "start": "npx cypress run"
+    "start": "npx cypress run",
+    "test:saucedemo": "npx cypress run --spec \".\/cypress\/e2e\/saucedemo\/*.cy.js\""
   }
 }
