--- a/.github/workflows/manual_run.yml
+++ b/.github/workflows/manual_run.yml
@@ -26,8 +26,6 @@ jobs:
   prepare-test:
     runs-on: ubuntu-latest
     steps:
-        - run: |
-
         - run: echo "Checking out the code for ${{github.event.inputs.select_project}}"
         - run: echo " Running on e2e test environment ${{github.event.inputs.select_environment}}"
         - name: checkout code
@@ -54,6 +52,9 @@ jobs:
             node-version: '14.x'
             cache: "npm"
             cache-dependency-path: "package-lock.json"
+        - run: |
+            npm install --save-dev
+            npm install cypress
         - name: Cypress run
           uses: cypress-io/github-action@v6
           with:
