--- a/.github/workflows/manual_run.yml
+++ b/.github/workflows/manual_run.yml
@@ -60,4 +60,5 @@ jobs:
           with:
             start: npm run start
             test: npm run test:saucedemo
+            e2eExercise: npm run test:automationExercise
  
