--- a/.github/workflows/manual_run.yml
+++ b/.github/workflows/manual_run.yml
@@ -37,12 +37,13 @@ jobs:
             STAGING_URL: ${{ secrets.STAGING }}
             SELECTED_ENV: ${{ github.event.inputs.select_environment }}
           run: |
-            if [ $SELECTED_ENV == "QA" ]; then
+            if [ $SELECTED_ENV == "qa" ]; then
               echo "ENV_URL=$QA_URL" >> $GITHUB_ENV
-            elif [ $SELECTED_ENV == "STAGING" ]; then
+            elif [ $SELECTED_ENV == "staging" ]; then
               echo "ENV_URL=$STAGING_URL" >> $GITHUB_ENV
             else
               echo "No environment selected"
+              exit 1
             fi
         
         
@@ -57,6 +58,8 @@ jobs:
             npm install cypress
         - name: Cypress run
           uses: cypress-io/github-action@v6
+          env:
+            CYPRESS_BASE_URL: ${{ env.ENV_URL }}
           with:
             start: npm run start
             test: npm run test:saucedemo
