--- a/.github/workflows/manual_run.yml
+++ b/.github/workflows/manual_run.yml
@@ -50,7 +50,7 @@ jobs:
             fi
         
         - name: Print ENV_URL
-          run: echo "ENV_URL is set to ${{ENV_URL}}"
+          run: echo "ENV_URL is set to $ENV_URL"
           env:
             ENV_URL: ${{ env.ENV_URL }}
         - name: Set up Node.js
