--- a/.github/workflows/manual_run.yml
+++ b/.github/workflows/manual_run.yml
@@ -21,7 +21,7 @@ on:
             - staging
             - production
 env:
-  QA_URL: "https://automationexercise.com/"
+  QA_URL: ${{ env.QA }}
   STAGING_URL: ${{ secrets.STAGING }}
   SELECTED_ENV: ${{ github.event.inputs.select_environment }}
   
