--- a/.github/workflows/manual_run.yml
+++ b/.github/workflows/manual_run.yml
@@ -67,6 +67,6 @@ jobs:
         env:
           CYPRESS_BASE_URL: ${{ env.ENV_URL }}
         with:
-          start: npm run start
+          # start: npm run start
           # test: npm run test:saucedemo
           e2eExercise: npm run test:automationExercise
